明确依赖访问权限，避免出现冲突